# django_app

./: Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  start
src/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/scores/: admin.py  forms.py  models.py  urls.py  views.py
src/scores/migrations/: 0001_initial.py
src/templates/scores/: show_scores.html
