[tool.poetry]
name = "django-app"
version = "0.1.0"
description = "Simple Django Application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-stubs = "^1.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
gray = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
