[tool.poetry]
name = "django-app"
version = "0.1.0"
description = "Simple Django Application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-stubs = "^1.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
gray = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main",]
mypy_path = "src"
exclude = ["manage.py",]

python_version = "3.10"
pretty = true
warn_unused_configs = true

ignore_missing_imports = true
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
namespace_packages = true

warn_redundant_casts = true
warn_unused_ignores = true

# Is true by default
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "config.settings"